# aiperf

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-container.md  ATTRIBUTIONS.md  CLAUDE.md  CONTRIBUTING.md  DCO.md  Dockerfile  Makefile  README.md  SECURITY.md  example_trace.jsonl  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: dco.yml
.github/workflows/: generate_documentation.yaml  lint-pr-title.yaml  pr-install-instructions.yaml  pre-commit.yml  run-integration-tests.yml  run-unit-tests.yml
aiperf/: __init__.py  __main__.py  cli.py  cli_runner.py  cli_utils.py  module_loader.py
aiperf/clients/: __init__.py  client_interfaces.py  model_endpoint_info.py
aiperf/common/: __init__.py  aiperf_logger.py  base_component_service.py  base_metaclass.py  base_service.py  bootstrap.py  constants.py  credit_models.py  dataset_models.py  decorators.py  enums.py  exceptions.py  factories.py  health_models.py  hooks.py  interfaces.py  logging.py  messages.py  mixins.py  models.py  protocols.py  pydantic_utils.py  record_models.py  service.py  tokenizer.py  types.py  utils.py  worker_models.py
aiperf/controller/: __init__.py  base_service_manager.py  controller_utils.py  kubernetes_service_manager.py  multiprocess_service_manager.py  system_controller.py  system_mixins.py
aiperf/data_exporter/: __init__.py  console_error_exporter.py  console_exporter.py  exporter_config.py  exporter_manager.py  json_exporter.py  record.py
aiperf/dataset/: __init__.py  dataset_manager.py  utils.py
aiperf/endpoints/: __init__.py  openai_aiohttp.py  openai_chat.py  rankings.py
aiperf/exporters/: __init__.py  console_error_exporter.py  console_exporter.py  console_metrics_exporter.py  csv_exporter.py  display_units_utils.py  experimental_metrics_console_exporter.py  exporter_config.py  exporter_manager.py  gpu_telemetry_console_exporter.py  json_exporter.py
aiperf/gpu_telemetry/: __init__.py  constants.py  telemetry_manager.py
aiperf/metrics/: __init__.py  base_aggregate_counter_metric.py  base_aggregate_metric.py  base_metric.py  derived_sum_metric.py  metric_dicts.py  metric_registry.py
aiperf/parsers/: __init__.py  inference_result_parser.py  openai_parsers.py
aiperf/post_processors/: __init__.py  base_metrics_processor.py  basic_metrics_streamer.py  metric_record_processor.py  metric_results_processor.py  metric_summary.py  processing_stats_streamer.py  streaming_post_processor.py
aiperf/progress/: __init__.py  progress_models.py
aiperf/records/: __init__.py  phase_completion.py  record_processor_service.py  records_manager.py
aiperf/services/: __init__.py  base_component_service.py  base_controller_service.py  base_service.py
aiperf/tests/: __init__.py  base_test_component_service.py  base_test_controller_service.py  base_test_service.py  conftest.py  test_aiperf_task.py  test_audio_generator.py  test_benchmark_duration_metric.py  test_dataset_utils.py  test_hooks.py  test_image_generator.py  test_max_response_metric.py  test_messages.py  test_metric_summary.py  test_min_request_metric.py  test_prompt_generator.py  test_records.py  test_request_latency_metric.py  test_tokenizer.py  test_ttft_metric.py  test_ttst_metric.py
aiperf/timing/: __init__.py  concurrency_strategy.py  config.py  credit_issuing_strategy.py  credit_manager.py  fixed_schedule_strategy.py  request_rate_strategy.py  timing_manager.py
aiperf/ui/: __init__.py  base_ui.py  no_ui.py  tqdm_ui.py
aiperf/workers/: __init__.py  credit_processor_mixin.py  worker.py  worker_manager.py
aiperf/zmq/: pub_client.py  pull_client.py  push_client.py  router_reply_client.py  sub_client.py  zmq_base_client.py  zmq_proxy_base.py  zmq_proxy_sockets.py
docs/: Development.md  architecture.md  benchmark_datasets.md  cli_options.md  genai-perf-feature-comparison.md  hook-system.md  index.md  migrating.md  reproducibility.md  tutorial.md
docs/benchmark_modes/: trace_replay.md
docs/diagrams/: Service Class Diagram.md  metrics-flow.md  mixins.md
docs/tutorials/: fixed-schedule.md  goodput.md  gpu-telemetry.md  huggingface_tgi.md  multi-turn.md  rankings.md  request-cancellation.md  request-rate-concurrency.md  sequence-distributions.md  synthetic-video.md  template-endpoint.md  time-based-benchmarking.md  timeslices.md  trace-benchmarking.md  working-with-profile-exports.md
integration-tests/: Makefile  README.md  pyproject.toml
integration-tests/mock_server/: app.py  config.py  main.py  models.py  tokenizer_service.py
notebooks/: LLM_TCO_Calculator.xlsx  README.md  TCO_calculator.ipynb
src/aiperf/: __init__.py  __main__.py  cli_runner.py  cli_utils.py  module_loader.py
tests/: README.md  base_test_component_service.py  base_test_controller_service.py  base_test_service.py  conftest.py  test_audio_config.py  test_background_task.py  test_cli_runner_macos.py  test_dataset_utils.py  test_hooks.py  test_input_config.py  test_main.py  test_messages.py  test_sequence_distribution.py  test_user_config.py
tests/aiperf_mock_server/: README.md  __main__.py  app.py  config.py  dcgm_faker.py  models.py  pyproject.toml  tokens.py  utils.py
tests/clients/: test_model_endpoint_info.py
tests/common/: conftest.py  test_bootstrap_macos.py  test_environment.py  test_session_id_generator.py
tests/comms/: mock_zmq.py
tests/composers/: conftest.py  test_base_composer.py  test_custom_composer.py  test_synthetic_composer.py
tests/config/: test_base_config.py  test_config_validators.py  test_dev_mode.py  test_endpoint_config.py  test_input_config.py  test_output_config.py  test_prompt_config.py  test_service_config.py  test_sessions_config.py  test_user_config.py
tests/controller/: conftest.py  test_controller_utils.py  test_multiprocess_service_manager.py  test_system_controller.py
tests/data_exporters/: conftest.py  test_console_exporter.py  test_console_usage_discrepancy_exporter.py  test_csv_exporter.py  (+6 more)
tools/: COPYRIGHT  add_copyright.py  generate_api_md.py  generate_init_files.sh
(+907 files in other folders)
