# Build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aiperf/__init__.py"

[project]
name = "aiperf"
version = "0.1.0"
description = "AIPerf is a package for performance testing of AI models"
authors = []
dependencies = [
  "aiofiles~=24.1.0",
  "aiohttp==3.12.13",
  "numpy==2.2.6",
  "openai[aiohttp]~=1.92.2",
  "orjson==3.10.18",
  "pandas==2.3.0",
  "pillow==11.1.0",
  "psutil~=7.0.0",
  "pydantic==2.11.4",
  "pyzmq==26.4.0",
  "rich==14.0.0",
  "ruamel.yaml==0.18.12",
  "setproctitle==1.3.6",
  "soundfile==0.13.1",
  "tqdm>=4.67.1",
  "transformers>=4.52.0",
  "uvloop==0.21.0",
  "cyclopts>=3.0.0",
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{ include = "aiperf" }]

# CLI Entrypoint
[project.scripts]
aiperf = "aiperf.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio",
  "pytest-cov",
  "ruff>=0.0.0",
  "pre-commit>=4.2.0",
  "mkinit>=1.1.0",
  "black>=25.1.0",
]


[tool.ruff]
# Base settings for ruff
line-length = 88
indent-width = 4
exclude = ["__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
    # pycodestyle (except E501)
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Ignore line length errors, ruff format will handle this but
# can have some lines that are slightly over due to the way formatting works
ignore = ["E501"]

[tool.pytest.ini_options]
# Basic pytest configuration
testpaths = ["aiperf/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
